@@ -51,4 +51,5 @@
   </popup>
   <accelerator action="OpenLocation"/>
   <accelerator action="Reload"/>
+  <accelerator action="TextCursor"/>
 </ui>
