@@ -1,3 +1,9 @@
+2005-08-29  Shaun McCance  <shaunm@gnome.org>
+
+	* data/ui/yelp-ui.xml:
+	* src/yelp-window.c:
+	- Enabled F7 keybinding, as per #157941
+
 2005-08-24  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-xslt-pager.c:
